Line Endings and small test changes to allow for Armenian Characters. Have to commit for syncing purposes.

--- a/lib/bible/bible.yml
+++ b/lib/bible/bible.yml
@@ -2,7 +2,10 @@
 ---
 -
   - Genesis
-  - Gen
+  -
+    - Gen
+    - Ծննդոց
+    - ծննդոց
   - 50
   -
     - 31
@@ -57,7 +60,10 @@
     - 26
 -
   - Exodus
-  - Ex
+  - 
+    - Ex
+    - ելք
+    - Ելք
   - 40
   -
     - 22
@@ -102,7 +108,11 @@
     - 38
 -
   - Leviticus
-  - Lev
+  - 
+    - Lev
+    - ՂԵՒՏԱԿԱՆ
+    - Ղեւտական
+    - ղեւտական
   - 27
   -
     - 17
